--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
