--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-responsive": "^10.0.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2"
   },
@@ -25,6 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
